style.css
/* ... */
.agenda-location{
	/*float:left;*/

}

.agenda-column {
	padding:0 2vw;
}

.agenda-content.dive-for-scale {
	display:none;
}

.lunch-keynote {
	text-align:center;
	color:#EB018B; /* #F6B917 yellow */
	font-weight:700;
	font-size:2em;
}

.lunch-container {
	border:0.5px solid black;
	padding:2vh;
	margin:2vh 0;
	margin-left:auto;
	margin-right:auto;

}

.lunch-content {
	text-align:center;
	padding: 0 5vh;
	padding-top:1vh;
	padding-bottom:2vh;
	font-weight:300;
	/*text-align:justify;*/
	font-size:1.5em;
}

.keynote {
	font-weight:400;
}

.keynote-container {
	border:0.5px solid black;
	padding:2vh;
	margin:2vh 0;
	margin-left:auto;
	margin-right:auto;

}

/* ========================
	SPEAKERS
	======================= */

#speakers {
	width:70%;
	margin-left:auto;
	margin-right:auto;
}

.keyword-speakers {
	color:#ED8922;
}

.speaker-img {
	border-radius:3px;
	margin-bottom:1vh;
	width:80%;
	margin-left:auto;
	margin-right:auto;
	border:0.5px solid #CCC;
}

.speaker-name {
	font-weight:300;
text-align:center;
}

.speaker-container h5 {
	text-transform:lowercase;
	margin-top:-0.4vh;
	width:80%;
	text-align:center;

}
.speaker-position {
	color:#666;
	text-align: center;
}

.speaker-session {
	color:#79B543;
	font-weight:400;
}

.speaker-container {
	/*background:yellow;*/
	margin-bottom:2vh;
	text-align:center;
}

.speaker-title {
	margin-left:auto;
	margin-right:auto;
}

/* ========================
	FOOTER
	======================= */

footer {
	bottom:0;
	padding:0;
	padding-bottom:3vh;
	border-top:0.5px #CCC solid;
}

.footer-text {
	padding-top:1.5vh;
	/*background:#E3E3E3;*/
	/*bottom:0;*/
	/*margin-top:3vh;*/
	width:100%;
	/*padding-right:3vw;*/

}

.footer-text a {
	color:#666;
	padding-right:1vw;
}

.footer-text a:hover {
	opacity:0.7;
	cursor:pointer;
}

.footer-content {
	float:right;
	padding-right:2vw;
}

.icn-logo {
	width:50px;
}



/* DESIGNING FOR RESPONSIVENESS !!!!!! ===== */
/*==========  Mobile First Method  ==========*/

    /* Custom, iPhone Retina */ 
@media only screen and (max-width : 320px){
.navbar {
		background:linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.95));
	}
.page-width {
		width:100%;
	}

	.landing-text {
		margin-top:22vh;
		z-index:1;
		height:100%;
	}

	.date {
		color:white;
		/*font-family:'Lato';*/
		margin-bottom:-5vh;
		font-weight:400;
		font-size:1.3em;
	}

	.push-boundaries {
		font-weight:900;
		/*font-family:'Lato', sans-serif;*/
		float:left;
		margin-top:7.5vh;
		font-size:3em !important;
		color:black !important;
	}

	.information {
		font-size:1.6em;
		padding:2.5vh;
		/*border:none;*/
		margin-right:1vw;
		text-align:right;
		margin-top:0vh;
	}

	.title {
		font-size:3em;
	}

	.section {
		padding:0 8vw;
	}

	#about {
		margin-top:-15vh;
	}

	.content1 {
		font-size:1.2em;
		margin-top:3vh;
	}

	.content {
		font-size:1.2em;
		padding-bottom:3vh;
		margin-top:-8vh;
	}

	.content3 {
		font-size:1.2em;
		padding-bottom:3vh;
	}

	#kmsembed-0_dj2h7e6d {
		height:30% !important;
	}

	.agenda-title {
		text-align:center;
		font-weight:700;
		text-transform:uppercase;
		font-size:1.3em;
		clear:both;
		color:#EB018B;
		/*margin-top:3vh;*/
		padding-top:5vh;
	}

	.agenda-time {
		font-size:0.9em;
		float:left;
		width:20%;
	}

	.agenda-event {
		font-size:1.2em;
		/*text-align:right;*/
		float:right;
		width:70%;
	}

	.agenda-location, .agenda-person {
		width:70%;
		font-size:1em;
	}

	.agenda-content.dive-for-scale {
		display:block !important;
	}

	.agenda-content.agenda-not-for-scale {
		display:none;	
	}

		#agenda {
		margin:0 2vh;
	}

	.lunch-keynote {
	text-align:center;
	color:#EB018B; /* #F6B917 yellow */
	font-weight:700;
	font-size:1.8em;
}

.lunch-content {
	text-align:center;
	padding: 0 5vh;
	padding-top:1vh;
	padding-bottom:2vh;
	font-weight:300;
	/*text-align:justify;*/
	font-size:1.1em;
}

	p {
		font-size:1em;
	}

	.speaker-img{
		margin-bottom:5vh;
	}

	.speaker-container{
		width:90%;
		margin-left:auto;
		margin-right:auto;
		display:block;
		margin-bottom:5vh;
	}
	#speakers {
		width:100%;
	}

	.shirt {
		background: url('assets/shirt_crop.jpg');
		background-attachment:initial;
		/*height:25%;*/
		background-size:230%;
		background-repeat:no-repeat;
		background-position:right;
	}

	footer {
		padding-bottom:4vh;
	}

	.featured-content {
		margin-top:2vh;
		text-align:justify;
		padding:3vh;
		font-size:1.1em;
	}

	.featured-name {
		font-weight:700;
		font-size:1.4em;
		padding-top:0;
		padding: 0 3vh;
		text-align:center;
	}

	.featured-company {
		font-weight:400;
		font-size:1.2em;
		padding:0 3vh;
		text-align:center;
	}

	.featured-img {
		border:0.5px solid #CCC;
		/*margin:2vh;*/
	}



}
/* ... */

